--- a/NhaHang/appsettings.json
+++ b/NhaHang/appsettings.json
@@ -3,10 +3,10 @@
         "cnn": "Data Source = LAPTOP-RQAPMTUL; Initial Catalog = RestaurantManagement; Persist Security Info = True; User ID = sa; Password = 123456789; TrustServerCertificate = True;"
     },
     "JwtSettings": {
-        "SecretKey": "superSecretKey@345",
-        "Issuer": "yourApp", 
-        "Audience": "yourAppUsers", 
-        "ExpiryInHours": 1 
+        "SecretKey": "this-is-a-very-long-super-secret-key-1234567890",
+        "Issuer": "yourApp",
+        "Audience": "yourAppUsers",
+        "ExpiryInHours": 1
     },
     "Logging": {
         "LogLevel": {
