Cập nhật BillController xuất hóa đơn sau khi thanh toán

--- a/NhaHang/NhaHang.csproj
+++ b/NhaHang/NhaHang.csproj
@@ -25,6 +25,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
+    <PackageReference Include="Spire.Doc" Version="13.5.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
   </ItemGroup>
